WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268525
Inline box may not be present in the enclosing formatting context
https://bugs.webkit.org/show_bug.cgi?id=268525
Summary
Inline box may not be present in the enclosing formatting context
alan
Reported
2024-01-31 19:20:42 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-01-31 19:20:55 PST
<
rdar://problem/119921061
>
alan
Comment 2
2024-01-31 19:24:29 PST
Pull request:
https://github.com/apple/WebKit/pull/1051
EWS
Comment 3
2024-02-01 13:13:02 PST
Committed
272448.456@safari-7618-branch
(66b364de9dfc): <
https://commits.webkit.org/272448.456@safari-7618-branch
> Reviewed commits have been landed. Closing PR #1051 and removing active labels.
EWS
Comment 4
2024-03-25 21:23:29 PDT
Committed
276674@main
(fe11bcadadbf): <
https://commits.webkit.org/276674@main
> Reviewed commits have been landed. Closing PR #26418 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug