Inline box may not be present in the enclosing formatting context https://bugs.webkit.org/show_bug.cgi?id=268525 rdar://119921061

Reviewed by Antti Koivisto.

Speculative fix when the (potentially damaged) inline box is not present in the enclosing formatting context.
This may happen when RenderInline::linesBoundingBox is called on a dirty tree after moving an inline box (<span>)
from a block to an other (but before clearing the tree by running layout).

* Source/WebCore/rendering/RenderInline.cpp:
(WebCore::RenderInline::linesBoundingBox const):

Originally-landed-as: 272448.456@safari-7618-branch (66b364de9dfc). rdar://124553574
Canonical link: https://commits.webkit.org/276674@main